# defect-detection

./: .env.example  .gitignore  README.md  defect-detection-plan-v2.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: Containerfile  config.py  main.py  pyproject.toml
backend/db/: __init__.py  models.py  session.py
backend/routers/: health.py  inference.py  results.py
backend/schemas/: __init__.py  response.py
backend/services/: __init__.py  db_service.py  inference_service.py  storage_service.py
backend/tests/: test_health.py
frontend/: Containerfile  nginx.conf  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/analytics/: DefectRateChart.tsx
frontend/src/components/history/: HistoryTable.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  skeleton.tsx  table.tsx
frontend/src/queries/: useCategories.ts  useInference.ts  useResults.ts  useStats.ts  useTelemetry.ts
frontend/src/routes/: __root.tsx  analytics.tsx  history.tsx  index.tsx  inspect.tsx
frontend/src/types/: api.ts
notebooks/: 01_mvtec_eda.ipynb
podman/: compose.yaml
reports/model-eval/: 2026-04-25-mlops-upgrade.md  all_categories_metrics.md
reports/model-eval/tuning/: grid_tuning.json
scripts/: check_model_gate.sh  ci.sh  dev.sh  download_mvtec.sh  ml_workflow.sh  report_model_metrics.py  tasks.sh  train.sh  train_all_categories.sh  tune_failed_categories.sh  tune_patchcore_category.py
src/: __init__.py
src/data/: __init__.py  dataset.py  split.py  transforms.py
src/models/: __init__.py  base.py  patchcore.py  yolov8_trainer.py
src/tabular_pipeline/: __init__.py  config.py  deploy_api.py  evaluate.py  preprocess.py  run_pipeline.py  train.py
src/training/: config.yaml  evaluate.py  promote.py  train.py
src/utils/: logger.py  storage.py  visualize.py
